Raise ArgumentError for IO.foreach with limit of 0

Makes behavior consistent with IO.readlines.

Fixes [Bug #18767]